<resources>
    <string name="app_name">Italent</string>
    <string name="server_url">http://142.93.103.68</string>

    <string name="title_activity_camera">CameraActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="input_comment">Type title</string>
    <string name="title_news">News</string>
    <string name="title_search">Search</string>
    <string name="title_messages">Messages</string>
    <string name="title_profile">Profile</string>
    <string name="post_author">Post author</string>
    <string name="news">News</string>
    <string name="search">Search</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="post">Post</string>
    <string name="searchForPeople">Search for people</string>
    <string name="searchForTalent">Search for talent</string>
    <string name="searchPeople">People</string>
    <string name="searchTelent">Talent</string>
    <string name="choiceTalent">Pick from existing talents</string>
    <string name="newTalent">or open <u>new talent.</u></string>
    <string name="send">Send</string>
    <string name="noMessage">No messages</string>
    <string name="r">R</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="exclusive">Exclusive</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="logo">Logo</string>
    <string name="do_you_have_account">Do you have an account?</string>
    <string name="new_user_question">Are you new user?</string>
    <string name="phone">Phone number</string>
    <string name="welcome">Welcome!</string>
    <string name="code">Code</string>
    <string name="says_about_you">Says about you</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="about_me">About me</string>
    <string name="onboard">On board</string>
    <string name="putsmscode">Put sms code here:</string>
</resources>
