<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">

    <ImageView
        android:id="@+id/activity.start.iv.logo"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="70dp"
        android:layout_gravity="center"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/login_italent_logo"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/activity.start.tv.welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:text="@string/welcome"
        android:fontFamily="@font/sfuitextlight"
        android:textColor="@color/white"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/activity.start.button.signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/primaryPink"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="@font/sfuitextlight"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/doYouHaveAccText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_you_have_account"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:fontFamily="@font/sfuitextlight"/>

        <TextView
            android:id="@+id/activity.start.button.signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:text="@string/signin"
            android:textColor="@color/primaryPink"
            android:textSize="15sp"
            android:fontFamily="@font/sfuitextlight"/>
    </LinearLayout>

</LinearLayout>