<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_background">


    <ImageView
        android:id="@+id/activity.login.iv.logo"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="70dp"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/login_italent_logo"
        android:contentDescription="@string/logo" />


    <EditText
        android:id="@+id/activity.login.et.username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        android:fontFamily="@font/sfuitextlight"
        android:importantForAutofill="no" />


    <EditText
        android:id="@+id/activity.login.et.password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        android:fontFamily="@font/sfuitextlight"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/activity.login.button.login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/signin"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="@font/sfuitextregular"
        android:onClick="login"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center">
        <TextView
            android:id="@+id/isNewUserText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user_question"
            android:textColor="@color/white"
            android:fontFamily="@font/sfuitextlight"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/activity.login.tv.signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/signup"
            android:textColor="@color/primaryPink"
            android:fontFamily="@font/sfuitextlight"
            android:textSize="15sp"/>
    </LinearLayout>



</LinearLayout>