<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimaryDark"
    tools:context=".activities.ApplyActivity_">

    <LinearLayout
        android:id="@+id/activity.apply.ll.code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sfuitextlight"
            android:textSize="18sp"
            android:text="@string/putsmscode"
            android:textColor="@color/white"/>
        <ru.vnn.nick.italent.view.AutoUnfocusEditText
            android:id="@+id/activity.apply.et.code"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:importantForAutofill="no"
            android:inputType="numberSigned"
            android:fontFamily="@font/sfuitextlight"
            android:backgroundTint="@color/white"
            android:hint="@string/code"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:maxLength="4"
            android:textAlignment="center"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity.apply.ll.aboutme"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="70dp"
        android:visibility="gone"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sfuitextlight"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:text="@string/says_about_you"
            android:layout_gravity="center"
            />

        <ru.vnn.nick.italent.view.AutoUnfocusEditText
            android:id="@+id/activity.apply.et.firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="100dp"
            android:importantForAutofill="no"
            android:inputType="text"
            android:fontFamily="@font/sfuitextlight"
            android:hint="@string/firstname"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_gravity="center"/>

        <ru.vnn.nick.italent.view.AutoUnfocusEditText
            android:id="@+id/activity.apply.et.lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:importantForAutofill="no"
            android:inputType="text"
            android:fontFamily="@font/sfuitextlight"
            android:hint="@string/lastname"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_gravity="center"/>

        <ru.vnn.nick.italent.view.AutoUnfocusEditText
            android:id="@+id/activity.apply.et.description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:importantForAutofill="no"
            android:inputType="text"
            android:fontFamily="@font/sfuitextlight"
            android:hint="@string/about_me"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/activity.apply.button.onboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/primaryPink"
            android:text="@string/onboard"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="@font/sfuitextregular"/>
    </LinearLayout>
</FrameLayout>